<resources>
    <string name="app_name">MyQuiz</string>
    <string name="home">Home</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="profile">Profile</string>
    <string name="register">REGISTER</string>
    <string name="login">LOGIN</string>
    <string name="new_user">New User?</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="delete">Delete</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="edit_profile_pic">Edit Profile Pic</string>
    <!--    <string name="username">Name: POtaTo_SLaYer</string>-->
    <string name="username">Username</string>
    <string name="email_profile">Email:</string>
    <string name="logout">LogOut</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="created_at">Created At</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="role">Select Role</string>
    <string name="sign_up_to_continue">Sign up to continue.</string>
    <string name="sign_in_to_continue">Sign in to continue.</string>
    <string name="app_icon">App Icon</string>
    <string name="re_type_password">Re-Type Password</string>
    <string name="your_score">Your Score</string>
    <string name="finish">Finish</string>
    <string name="score">Score</string>
    <string name="quizid">QuizId</string>
    <string name="_00_00">00:00</string>
    <string name="join_a_quiz">Join a Quiz</string>
    <string name="create_new_quiz">Create New Quiz</string>
    <string name="quiz_title">Quiz Title</string>
    <string name="created_by">Created By</string>
    <string name="back">Back</string>
    <string name="dialog_icon_desc">Dialog Logout Confirmation</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to log out?</string>
    <string name="selected_csv_file_name">Selected CSV File Name</string>
    <string name="enter_quiz_id">Enter Quiz ID</string>
    <string name="select_csv_file">Select CSV File</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="enter_a_quiz_id">Enter a Quiz ID</string>
    <string name="sort_rank_by_quiz_id">Sort Rank by Quiz Id</string>
    <string name="username_profile">Username:</string>
    <string name="duration_quiz">Duration:</string>
    <string name="question">Question</string>
    <string name="opt_1">Opt 1</string>
    <string name="next">Next</string>
    <string name="quiz_results">Quiz Results</string>
    <string name="score_quiz">Score:</string>
    <string name="username_leaderboard">Username:</string>
    <string name="quiz_id_leaderboard">Quiz ID:</string>
    <string name="score_leaderboard">Score:</string>

    <string-array name="roles_array">
        <item>Teacher</item>
        <item>Student</item>
    </string-array>
</resources>