<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.screens.joinquiz.JoinQuizFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/btnBack"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_margin="16dp"
            android:clickable="true"
            android:contentDescription="@string/back"
            android:focusable="true"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/animation_back" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/enter_a_quiz_id"
            android:textColorHint="@color/textColorDark"
            app:boxStrokeColor="@color/mutedIndigo">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etQuizId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/textColorDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/mutedPastelPurple"
            android:text="@string/start_quiz"
            android:textColor="@color/colorInfo"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>

