<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp"
    android:backgroundTint="@color/transparent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:scaleType="centerCrop"
            android:src="@drawable/leaderboard_layout" />

        <LinearLayout
            android:id="@+id/llTodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="20dp"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorDark"
                    android:text="Username:"
                    android:textStyle="bold"
                    style="@style/TextAppearance.Material3.TitleLarge" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorDark"
                    android:text="@string/username"
                    android:textStyle="bold"
                    android:layout_marginStart="10dp"
                    style="@style/TextAppearance.Material3.TitleLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:gravity="start">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorDark"
                    android:text="Score:"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    style="@style/TextAppearance.Material3.BodyLarge" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorDark"
                    android:text="@string/score"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"
                    style="@style/TextAppearance.Material3.BodyLarge" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingStart="20dp"

                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorDark"
                    android:text="Quiz ID:"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    style="@style/TextAppearance.Material3.BodyLarge" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvQuizId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/textColorDark"
                    android:text="@string/quizid"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="10dp"
                    style="@style/TextAppearance.Material3.BodyLarge" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>
